# hive

./: .deepsource.toml  .dockerignore  .gitattributes  .gitguardian.yaml  .gitignore  AUTHORS  COPYING  Cargo.toml  Dockerfile  Makefile  README.md  Vagrantfile  benchmarker.go  blocktests.sh  build.go  chain.rlp  circle.yml  clients.yaml  container.go  containers.go  eth2.go.work  genesis.json  go-ethereum.txt  go.mod  go.sum  go.work  go.work.sum  hive.go  hiveErrorReporting.go  hive_linux.go  hive_notlinux.go  images.go  internal.go  network.go  provision.sh  proxycontainer.go  shell.go  simulator.go  taiko-l1.txt  test.sh  (+2 more)
.circleci/: compile-simulators.sh  config.yml  continue_config.yml  rust-simulators.sh  upgrade-hivesim.sh
.github/: dependabot.yml
.github/workflows/: dashboard.yml  dashboard_debug.yml  dashboard_debug_detailed.yml  dashboard_erigon.yml  dashboard_erigon_cancun.yml  dashboard_matrix.yml  dashboard_nethermind.yml  dashboard_nethermind_cancun.yml
Godeps/: Godeps.json
chaintools/: chaintools.go  go.mod  go.sum  sealingEthash.go
clients/: erigon.yaml  go-ethereum.yaml  nethermind.yaml
clients/aleth/: Dockerfile  aleth.sh  enode.sh  mapper.jq
clients/aleth:develop/: Dockerfile  Dockerfile.develop  aleth.py  eth.sh
clients/aleth:nightly/: Dockerfile  aleth.sh
clients/aleth_master/: Dockerfile
clients/aleth_nightly/: Dockerfile  aleth.sh  config.json
clients/bera-geth/: Dockerfile  Dockerfile.local  README.md  geth.sh  hive.yaml  mapper.jq
clients/bera-reth/: Dockerfile  bera-reth.sh  enode.sh  genesis.json  hive.yaml  mapper.jq
clients/besu/: Dockerfile  Dockerfile.git  Dockerfile.local  aot-compile.sh  besu.sh  enode.sh  genesis.json  mapper.jq
clients/cpp-ethereum:develop/: Dockerfile  config.json  eth.sh
clients/erigon/: Dockerfile  (+5 more)
configs/: 4844.yaml  cancun.yaml  develop.yaml  prague.yaml  snoop-client.yaml
contracts/: Failure.abi  Failure.sol  SimpleERC20.abi  SimpleERC20.sol
docs/: README.md  client.md  clients.md  commandline.md  intro.md  overview.md  simulation.md  simulators.md
hiveproxy/: Dockerfile  checklive.go  go.mod  go.sum  proxy.go  proxy_test.go
hivesim/: README.md  data.go  doc.go  docs.go  docs_test.go  engineapi.go  hive.go  hive_test.go  options.go  shared_client_test.go  testapi.go  testapi_test.go  testmatch.go  testmatch_test.go
hivesim-rs/: Cargo.toml
hivesim-rs/src/: lib.rs  macros.rs  simulation.rs  testapi.rs  testmatch.rs  types.rs  utils.rs
hiveviewer/: Results.html  index.html  packages.config  popup.html  testsuite.html  testsuitecomponent.html  viewer.html
optimism/: bindings.go  contracts.go  devnet.go  direct.go  eth1.go  go.mod  go.sum  hardhat.go  helper.go  nodes.go  p2p.go  params.go  roles.go  secrets.go  test_runner.go  vault.go
proxy/: README.txt
pseudoclients/: readme.md
resultview/: index.html
scripts/: run_test.sh  update-op-dependencies.py
simulators/cl/: Cargo.toml  Dockerfile  README.md
simulators/cl/clients/: default.yaml
simulators/cl/src/: junit.rs  main.rs  meta.rs  scenario.rs
simulators/lean/: Cargo.toml  Dockerfile  README.md  devnet.txt
simulators/lean/clients/: devnet3.yaml  devnet4.yaml  devnet5.yaml
simulators/lean/config/: lean-devnets.txt
simulators/lean/helper/: lean_spec_client_runner.py  leanspec-client.sh  prepare_lean_client_assets.py
simulators/lean/src/: main.rs
simulators/lean/src/scenarios/: client_interop.rs  gossip.rs  helper.rs  mod.rs  reqresp.rs  rpc_compat.rs  spec_assets.rs  sync.rs  util.rs  validation.rs  validation_block_rules.rs
simulators/lean/src/utils/: helper.rs  libp2p_mock.rs  mod.rs  util.rs
simulators/portal/: Cargo.toml  Dockerfile  README.md
simulators/portal/beacon/: Cargo.toml  Dockerfile
simulators/portal/beacon/rpc-compat/: Cargo.toml  Dockerfile
simulators/portal/beacon/rpc-compat/src/: constants.rs  main.rs
simulators/portal/beacon/src/: main.rs
simulators/portal/beacon/src/suites/: constants.rs  interop.rs  mesh.rs  mod.rs  rpc_compat.rs
simulators/portal/history/: Cargo.toml  Dockerfile
simulators/portal/history/portal-interop/: Cargo.toml
simulators/portal/history/portal-interop/src/: constants.rs  main.rs
simulators/portal/history/portal-mesh/: Cargo.toml  Dockerfile
simulators/portal/history/portal-mesh/src/: main.rs
simulators/portal/history/rpc-compat/: Cargo.toml  Dockerfile
simulators/portal/history/rpc-compat/src/: main.rs
simulators/portal/history/src/: main.rs
simulators/portal/history/src/suites/: interop.rs  mesh.rs  mod.rs  rpc_compat.rs  trin_bridge.rs
simulators/portal/history/trin-bridge/: Cargo.toml  Dockerfile
simulators/portal/history/trin-bridge/src/: constants.rs  main.rs
simulators/portal/portal-interop/: Cargo.toml  Dockerfile
simulators/portal/portal-interop/src/: constants.rs  main.rs
simulators/portal/portal-mesh/: Cargo.toml  Dockerfile
simulators/portal/portal-mesh/src/: main.rs
simulators/portal/rpc-compat/: Cargo.toml
simulators/portal/rpc-compat/src/: main.rs
simulators/portal/src/: main.rs
simulators/portal/src/suites/: environment.rs  mod.rs  utils.rs
simulators/portal/src/suites/beacon/: constants.rs  interop.rs  mesh.rs  mod.rs  rpc_compat.rs  sync.rs
simulators/portal/src/suites/beacon/bridge/: mod.rs  provider.rs  service.rs
simulators/portal/src/suites/history/: constants.rs  interop.rs  mesh.rs  rpc_compat.rs  trin_bridge.rs
simulators/portal/src/suites/state/: constants.rs  interop.rs  rpc_compat.rs
simulators/portal/state/: Cargo.toml  Dockerfile
simulators/portal/state/src/: main.rs
simulators/portal/state/src/suites/: constants.rs  interop.rs  mod.rs  rpc_compat.rs
simulators/portal/trin-bridge/: Cargo.toml  Dockerfile
simulators/portal/trin-bridge/src/: constants.rs  main.rs
simulators/portal/trin-bridge/src/test-data/: test_data_collection_of_forks_blocks.yaml
taiko/: README.md  config.go  config.json  contract.go  devnet.go  devnet_option.go  enode.go  env.go  envs.go  go.mod  go.sum  helper.go  how-it-works.excalidraw  node.go  node_option.go  params.go  roles.go  vault.go
(+1456 files in other folders)
