[package]
name = "cl-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
hivesim = { path = "../../hivesim-rs" }
async-trait = "0.1"
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
