[package]
name = "lean-sim"
version = "0.1.0"
authors = ["Kolby ML (Moroz Liebl) <kolbydml@gmail.com>"]
edition = "2021"

[dependencies]
hivesim.workspace = true
alloy-primitives = { version = "1.4.1", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
ssz = { package = "ethereum_ssz", version = "0.10" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.10" }
ssz_types = { git = "https://github.com/sigp/ssz_types.git", rev = "5dc2d521ed31f8e38b0065a80bf98af55aac06f8" }
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
