[package]
name = "portal"
version = "0.1.0"
authors = ["Kolby ML (Moroz Liebl) <kolbydml@gmail.com>"]
edition = "2021"

[dependencies]
alloy-consensus = "0.15"
alloy-rlp = "0.3.11"
alloy-primitives = "1.1"
anyhow = "1.0"
chrono = "0.4"
ethereum_ssz = "0.9"
ethportal-api = { git = "https://github.com/ethereum/trin", rev = "fd0b3c19c20c68059370a51d9b433ed34daa0591" }
futures = "0.3.25"
hivesim = { git = "https://github.com/ethereum/hive", rev = "4408fc1de3fee3ac23acd25a812c117756af2f39" }
itertools = "0.14"
lazy_static = "1.4.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.95"
serde_yaml = "0.9.33"
snap = "1.1"
ssz_types = "0.11"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
