[package]
name = "history"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>", "Kolby ML (Moroz Liebl) <kolbydml@gmail.com>"]
edition = "2021"

[dependencies]
ethportal-api = { git = "https://github.com/ethereum/trin", rev = "33ea99da64216899f7ab2778d117a18506d963dd" }
portal-spec-test-utils-rs = { git = "https://github.com/ethereum/portal-spec-tests", rev = "954f7d0eb2950a2131048404a1a4ce476bb64657" }
hivesim = { git = "https://github.com/ethereum/portal-hive", rev = "0f830ea8999f2878eb78ef67efc9f80cc888413e" }
futures = "0.3.25"
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
itertools = "0.10.5"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }

# todo: remove this when we update discv5. Added this because enr 10.1 is a breaking change
enr = { version = "=0.10.0", features = ["k256", "ed25519"] }
zstd = "=0.13.0"
zstd-safe = "=7.0.0"
zstd-sys = "=2.0.9+zstd.1.5.5"
