[package]
name = "state"
version = "0.1.0"
authors = ["Kolby ML (Moroz Liebl) <kolbydml@gmail.com>"]
edition = "2021"

[dependencies]
ethportal-api = { git = "https://github.com/ethereum/trin", tag = "v0.1.0-alpha.22" }
hivesim = { git = "https://github.com/ethereum/portal-hive", rev = "0f830ea8999f2878eb78ef67efc9f80cc888413e" }
futures = "0.3.25"
itertools = "0.10.5"
serde_json = "1.0.87"
serde_yaml = "0.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }

# todo: remove this when we update discv5. Added this because enr 10.1 is a breaking change
enr = { version = "=0.10.0", features = ["k256", "ed25519"] }
