[package]
name = "trin-bridge"
version = "0.1.0"
authors = ["Kolby ML (Moroz Liebl) <kolbydml@gmail.com>"]
edition = "2021"

[dependencies]
ethportal-api = { git = "https://github.com/ethereum/trin", rev = "b530dc3d40d51c21c800089eacb2852ebd8c4d45" }
portal-bridge = { git = "https://github.com/ethereum/trin", rev = "b530dc3d40d51c21c800089eacb2852ebd8c4d45" }
trin-validation = { git = "https://github.com/ethereum/trin", rev = "b530dc3d40d51c21c800089eacb2852ebd8c4d45" }
hivesim = { git = "https://github.com/KolbyML/portal-hive", rev = "c58ad6b9106569def7953954bb3f6e6ea612df50" }
itertools = "0.10.5"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
