[package]
name = "trin-bridge"
version = "0.1.0"
authors = ["Kolby ML (Moroz Liebl) <kolbydml@gmail.com>"]
edition = "2021"

[dependencies]
ethportal-api = { git = "https://github.com/ethereum/trin", rev = "b530dc3d40d51c21c800089eacb2852ebd8c4d45" }
hivesim = { git = "https://github.com/ethereum/portal-hive", rev = "927e0ff53e445e2eea6b45256ca8c6ed5fcb3241" }
itertools = "0.10.5"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
